--- a/ionic4_Overview/package.json
+++ b/ionic4_Overview/package.json
@@ -27,6 +27,8 @@
     "@angular/pwa": "~0.803.20",
     "@angular/router": "8.2.13",
     "@angular/service-worker": "~8.2.13",
+    "@capacitor/cli": "^1.5.0",
+    "@capacitor/core": "^1.5.0",
     "@ionic-native/core": "5.0.0-beta.15",
     "@ionic-native/in-app-browser": "5.0.0-beta.15",
     "@ionic-native/splash-screen": "5.0.0-beta.15",
